app/assets/stylesheets/style.css.scss
/* css document */ /* general styles */
@font-face {
    font-family: 'elliotsixregular';
    src:font-url('ElliotSix-webfont.eot');
    src:font-url('ElliotSix-webfont.eot?#iefix') format('embedded-opentype'),
         font-url('ElliotSix-webfont.woff') format('woff'),
}

@font-face {
    font-family: 'arapeyregular';
    src: font-url('arapey-regular-webfont.woff2') format('woff2'),
         font-url('arapey-regular-webfont.woff') format('woff');
}

@font-face {
    font-family: 'arapeyitalic';
    src: font-url('arapey-italic-webfont.woff2') format('woff2'),
         font-url('arapey-italic-webfont.woff') format('woff');
}

/* color palette */
:root {
  --green: #39b54a;
  --lalala: #1a1a1a;
  --summer: #8cc63f;
  --spring: #dc1e79;
  --winter: #29abe2;
  --fall: #f15a24;
}

.wrapper {
  height: 100%;
  overflow: hidden;
}

.manifesto-img {
  margin-top: 2em;
  width: 350px;
}

.salad {
  text-align: center;
}

body, body * {
  padding: 0;
  margin: 0;
}

body {
  line-height: 1.5em;
  box-sizing: border-box;
  border: 35px solid #fff;
  color: #fff;
  line-height: 1.65em;
  font-family: 'arapeyregular';
  font-weight: 100;
}

h1, h2, h3 {
  font-family: 'elliotsixregular';
}

// main, section, article, div, header, footer aside {
//   border: 1px solid red;
// }

.season-bar {
  width: 100%;
  height: 40px;
  background-color: #fff;
  margin-top: 4em;
}

.round-image {
  border-radius: 50%;
}

img, embed, object, iframe {
  max-width: 100%;
}

main {
  width: 100%;
  background-color: var(--lalala);
  padding-bottom: 2em;
}

section {
  width: 52%;
  margin: 0 auto;
  padding-top: 4em;
  padding-bottom: 2em;
  min-height: 800px;
}

article {
  width: 100%;
  overflow: hidden;
}

h1, h2 {
  margin: 1em 0em 1em 0em;
}

h1 {
  margin-top: 5em;
}

li {
  margin-left: 1.25em;
}

p {
  margin: 1.2em 0em 1.5em 0em;
  font-size: 1.2em;
}

span {
  font-family: 'arapeyitalic';
}

form textarea {
  font-family: inherit;
  font-size: inherit;
}

input {

}

#manifesto h2 {
  text-align: center;
}

#manifesto h4 {
  font-family: 'arapeyitalic';
  font-size: 1.6em;
  line-height: 2em;
  font-weight: 100;
  width: 70%;
  margin: 0 auto;
}

#manifesto p {
  font-size: 1.2em;
  font-weight: 100;
  line-height: 1.5em;
}

/* end general styles */

.left-content {
  width: 48%;
  float: left;
}

.right-content {
  width: 48%;
  float: right;
}

.seasons li {
  font-family: 'elliotsixregular';
}

footer {
  clear: both;
}

#home-page {
  background-image: url('grocery-background.jpeg');
  min-height: 100%;
  background-size: cover;
  background-attachment: fixed;
  background-repeat: no-repeat;
  background-position: center center;
  text-align: center;
  height: 900px;
  margin: 2.65em;
  width: 95%;
}


.Summer {
  background-color: var(--summer);
}

.Winter {
  background-color: var(--winter);
}

.Fall {
  background-color: var(--fall);
}

.Spring {
  background-color: var(--spring);
}

.recipe-break {
  line-height: 50%;
}

